# flightv4

./: .gitignore  .replit  pyproject.toml  replit.md
.emergent/: emergent.yml
attached_assets/: Pasted-Goal-Connect-the-existing-frontend-to-my-backend-running-locally-at-http-localhost-8000-while-sti-1763093787228_1763093787229.txt  Pasted-I-need-to-clean-up-my-onboarding-and-home-flows-so-the-app-is-consistent-Right-now-I-have-An-1763062809662_1763062809663.txt  Pasted-I-want-a-dedicated-Flight-Deck-or-Journey-Planner-page-that-uses-the-results-and-tech-stack-to-s-1763051158272_1763051158273.txt  Pasted-I-want-to-add-a-guided-example-story-into-the-app-that-walks-users-through-how-a-real-company-would--1763057301990_1763057301990.txt  Pasted-I-want-to-enhance-the-Quick-Assessment-page-so-that-it-shows-live-recommended-journeys-so-far-as--1763064079246_1763064079247.txt  Pasted-I-want-to-extend-my-app-with-Deep-Dive-assessments-for-each-major-marketing-function-Context--1763050351234_1763050351234.txt  Pasted-I-want-to-improve-the-Marketing-Tech-Stack-Inventory-page-so-that-It-feels-less-like-a-massive-1763065850281_1763065850281.txt  Pasted-I-want-to-introduce-a-persistent-cockpit-shell-layout-for-my-app-so-that-every-major-screen-feels--1763059295527_1763059295528.txt  Pasted-I-want-to-redesign-my-main-landing-home-page-so-that-it-acts-as-a-Pre-flight-Check-for-the-Marketi-1763059583265_1763059583266.txt  Pasted-I-want-to-upgrade-the-Quick-Assessment-experience-so-that-it-feels-like-a-pilot-watching-instruments-1763063622195_1763063622196.txt  (+5 more)
backend/: server.py  (+1 more)
(+35 files in other folders)
