[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "black>=25.11.0",
    "boto3>=1.40.72",
    "cryptography>=46.0.3",
    "email-validator>=2.3.0",
    "fastapi>=0.121.1",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "motor>=3.7.1",
    "mypy>=1.18.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "pydantic>=2.12.4",
    "pyjwt>=2.10.1",
    "pymongo>=4.15.4",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
    "uvicorn>=0.38.0",
]
